[gd_scene load_steps=17 format=3 uid="uid://b5h62i6ib3f8w"]

[ext_resource type="Script" path="res://Enemies/beholder.gd" id="1_oibwg"]
[ext_resource type="Texture2D" uid="uid://ddng0vrkw46xj" path="res://imgs/Beholver.png" id="2_ib6m6"]
[ext_resource type="Texture2D" uid="uid://bwfh55rn211ql" path="res://imgs/laser.png" id="3_srsoc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_edl4a"]
radius = 8.0

[sub_resource type="Animation" id="Animation_umbxd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser/laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("laser/laser:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mhaa7"]
resource_name = "default"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser/laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vbyi7"]
resource_name = "shooting"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 5, 4, 5, 6, 7, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser/laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("laser/laser:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ksh4v"]
_data = {
"RESET": SubResource("Animation_umbxd"),
"default": SubResource("Animation_mhaa7"),
"shooting": SubResource("Animation_vbyi7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pcx1v"]
radius = 5.0

[sub_resource type="Animation" id="Animation_qbeje"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprt:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ajkm6"]
resource_name = "walk"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprt:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665, 0.0, -0.0872665, 0.0, 0.0872665, 0.0, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_q18tx"]
resource_name = "shoot"
length = 1.5
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gxqgr"]
_data = {
"RESET": SubResource("Animation_qbeje"),
"shoot": SubResource("Animation_q18tx"),
"walk": SubResource("Animation_ajkm6")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fit7"]
bg_color = Color(0.105882, 0.0862745, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tx4yu"]
bg_color = Color(0.478431, 0.419608, 0.521569, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0ak8"]
size = Vector2(190, 2.5)

[node name="Beholder" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_oibwg")

[node name="area_dmg" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="area_dmg"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_edl4a")

[node name="sprt" type="Sprite2D" parent="."]
texture = ExtResource("2_ib6m6")
hframes = 4
vframes = 2

[node name="Sprite" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ksh4v")
}

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pcx1v")
debug_color = Color(0.99289, 0, 0.245631, 0.42)

[node name="spawn" type="Timer" parent="."]
autostart = true

[node name="walk" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gxqgr")
}

[node name="explosion" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 2.5
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 25.0
scale_amount_min = 0.5
scale_amount_max = 2.5
color = Color(0.74902, 0.764706, 1, 1)

[node name="HP_bar" type="ProgressBar" parent="."]
visible = false
offset_left = -8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = -6.0
theme_override_styles/background = SubResource("StyleBoxFlat_3fit7")
theme_override_styles/fill = SubResource("StyleBoxFlat_tx4yu")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="laser" type="Area2D" parent="."]

[node name="laser" type="Sprite2D" parent="laser"]
visible = false
z_index = -1
position = Vector2(100, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_srsoc")
vframes = 4

[node name="coll" type="CollisionShape2D" parent="laser"]
position = Vector2(100, 0)
shape = SubResource("RectangleShape2D_n0ak8")
disabled = true
debug_color = Color(0.99228, 0, 0.254217, 0.42)

[connection signal="area_entered" from="area_dmg" to="." method="_on_area_dmg_area_entered"]
[connection signal="body_entered" from="area_dmg" to="." method="_on_area_dmg_body_entered"]
[connection signal="timeout" from="spawn" to="." method="_on_spawn_timeout"]
[connection signal="area_entered" from="laser" to="." method="_on_area_dmg_area_entered"]
[connection signal="body_entered" from="laser" to="." method="_on_area_dmg_body_entered"]
